@@ -6,12 +6,11 @@
 			<drawimage condition="{brightBackground}" x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="gradientPNGBright" />
 			<drawrectangle x="0%" y="18%" width="54%" height="54%" color="{clrTransparent}" />
 		</area>
-		<!--<area x="0" y="0" width="100%" height="100%" layer="1">
-			<drawimage x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="tv" />
-			<drawrectangle x="0%" y="18%" width="54%" height="54%" color="{clrTransparent}" />
-		</area>-->
 		<area x="0" y="0" width="100%" height="100%" layer="2">
 			<drawimage x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="shadowsMainKiss" />
+		</area>
+		<area condition="{showInfosAndTimers}||{showInfosAndTimersAndLastrecs}" x="0" y="73%" width="100%" height="27%" layer="3">
+			<drawimage  x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="shadowsMainBottom" />
 		</area>
 		<area x="0" y="0" width="100%" height="11%" layer="3">
 			<drawimage x="0" width="{areawidth}*0.972" height="{areaheight}*0.972" imagetype="skinpart" path="gradientHeader" />
@@ -73,7 +72,7 @@
 		</area>
 	</colorbuttons>
 
-	<timers condition="{showOnlyTimers}||{showTimersRecordingsandInfos}" detached="true" delay="100" fadetime="500" >
+	<timers detached="true" delay="100" fadetime="500" >
 		<area condition="not{numtimerconflicts}" x="61%" y="73%" width="12%" height="6%" layer="3">
 			<drawtext condition="gt({numtimers}, 1)" x="5%" y="15%" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="{numtimers} {tr(activetimers)}" />
 			<drawtext condition="eq({numtimers}, 1)" x="5%" y="15%" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="{numtimers} {tr(activetimer)}" /> 
@@ -82,43 +81,88 @@
 			<drawtext condition="eq({numtimerconflicts}, 1)" x="5%" y="0" valign="center" font="{light}" fontsize="60%" color="{clrRed}" text="{numtimerconflicts} {tr(conflict)}!" />
 			<drawtext condition="gt({numtimerconflicts}, 1)" x="5%" y="0" valign="center" font="{light}" fontsize="60%" color="{clrRed}" text="{numtimerconflicts} {tr(conflicts)}!" />
 		</area>
-		<area condition="{showOnlyTimers}++not{showTimersRecordingsandInfos}" x="1%" y="80%" width="85%" height="18%" layer="3">
-			<loop name="timers" x="0" y="0" orientation="horizontal" columnwidth="{areawidth}/8" rowheight="{areaheight}" overflow="cut">
-				<drawimage x="0" y="0" width="{columnwidth}" height="{rowheight}" imagetype="skinpart" path="shadowsTimerMain" />
-			</loop>
-		</area>
-		<area condition="{showOnlyTimers}++not{showTimersRecordingsandInfos}" x="1%" y="80%" width="95%" height="18%" layer="3">
-			<loop name="timers" x="0" y="0" orientation="horizontal" columnwidth="{areawidth}/9*1.005" rowheight="{areaheight}" overflow="cut">
-				<drawimage cache="true" name="logo" y="{areaheight}*0.08" width="{columnwidth}*0.9" height="20%" align="center" imagetype="channellogo" path="{timers[channelid]}" />
-				<drawtextbox x="1%" y="40%" width="{columnwidth}*0.8" align="center" maxlines="2" font="{light}" fontsize="15%" color="{clrLightGray}" text="{timers[title]}" />
+
+		<area condition="{showInfosAndTimers}++not{showInfosAndTimersAndLastrecs}" x="1%" y="80%" width="78%" height="18%" layer="3">
+			<loop name="timers" x="0" y="0" orientation="horizontal" columnwidth="{areawidth}/7" rowheight="{areaheight}" overflow="cut">
+				<drawimage  cache="true" name="logo" y="{areaheight}*0.09" width="{columnwidth}*0.5" height="17%" align="center" imagetype="channellogo" path="{timers[channelid]}" />
+				<drawtextbox x="1%" y="40%" width="{columnwidth}*0.875" align="center" maxlines="2" font="{light}" fontsize="15%" color="{clrLightGray}" text="{timers[title]}" />
 				<drawtext condition="not{timers[recording]}" align="center" y="78%" font="{light}" fontsize="15%" color="{clrLightGray}" text="{timers[datetime]}"/>
 				<drawtext condition="{timers[recording]}" align="center" y="78%" font="{light}" fontsize="15%" color="{clrRed}" text="{timers[datetime]}"/>
+				<drawimage condition="{timers[isremotetimer]}" x="{columnwidth}*0.78" y="78%" width="{columnwidth}*0.16" height="20%" imagetype="skinpart" path="remoteTimers" />
 			</loop>
 		</area>
-		<area condition="{showOnlyTimers}++gt({numtimers}, 8)++not{showTimersRecordingsandInfos}" x="86%" y="80%" width="12%" height="18%" layer="3">
-			<drawimage x="0" y="0" width="{areawidth}*0.96" height="{areaheight}" imagetype="skinpart" path="shadowsTimerMainLast" />
-		</area>
-		<area condition="{showTimersRecordingsandInfos}++not{showOnlyTimers}" x="1%" y="80%" width="44%" height="18%" layer="3">
+		<area condition="not{showInfosAndTimers}++{showInfosAndTimersAndLastrecs}" x="1%" y="80%" width="44%" height="18%" layer="3">
 			<loop name="timers" x="0" y="0" orientation="horizontal" columnwidth="{areawidth}/4" rowheight="{areaheight}" overflow="cut">
-				<drawimage x="0" y="0" width="{columnwidth}" height="{rowheight}" imagetype="skinpart" path="shadowsTimerMain" />
-			</loop>
-		</area>
-		<area condition="{showTimersRecordingsandInfos}++not{showOnlyTimers}" x="1%" y="80%" width="44%" height="18%" layer="3">
-			<loop name="timers" x="0" y="0" orientation="horizontal" columnwidth="{areawidth}/4*1.005" rowheight="{areaheight}" overflow="cut">
-				<drawimage cache="true" name="logo" y="{areaheight}*0.08" width="{columnwidth}*0.9" height="20%" align="center" imagetype="channellogo" path="{timers[channelid]}" />
-				<drawtextbox x="1%" y="40%" width="{columnwidth}*0.8" align="center" maxlines="2" font="{light}" fontsize="15%" color="{clrLightGray}" text="{timers[title]}" />
+				<drawimage  cache="true" name="logo" y="{areaheight}*0.09" width="{columnwidth}*0.5" height="17%" align="center" imagetype="channellogo" path="{timers[channelid]}" />
+				<drawtextbox x="2%" y="40%" width="{columnwidth}*0.875" align="center" maxlines="2" font="{light}" fontsize="15%" color="{clrLightGray}" text="{timers[title]}" />
 				<drawtext condition="not{timers[recording]}" align="center" y="78%" font="{light}" fontsize="15%" color="{clrLightGray}" text="{timers[datetime]}"/>
-				<drawtext condition="{timers[recording]}" align="center" y="78%" font="{light}" fontsize="15%" color="{clrRed}" text="{timers[datetime]}"/>
+				<drawtext condition="{timers[recording]}" align="center" x="10" y="78%" font="{light}" fontsize="15%" color="{clrRed}" text="{timers[datetime]}"/>
+				<drawimage condition="{timers[isremotetimer]}" x="{columnwidth}*0.8" y="78%" width="{columnwidth}*0.16" height="20%" imagetype="skinpart" path="remoteTimers" />
 			</loop>
 		</area>
 	</timers>
-	<!--<lastrecordings condition="lt({numtimers}, 4)++{showTimersRecordingsandInfos}" detached="true" delay="100" fadetime="500">-->
-	<lastrecordings condition="{showTimersRecordingsandInfos}" detached="true" delay="100" fadetime="500">
-		<area x="45%" y="80%" width="33%" height="18%" layer="3">
+	<lastrecordings condition="{showInfosAndTimers}||{showInfosAndTimersAndLastrecs}" detached="true" delay="100" fadetime="500">
+		<area condition="eq({numtimers}, 6)++not{showInfosAndTimersAndLastrecs}" x="68%" y="80%" width="11%" height="18%" layer="3">
+			<loop name="recordings" x="0" y="0" orientation="horizontal" columnwidth="{areawidth}/1" rowheight="{areaheight}" overflow="cut">
+				<drawtext x="0" y="10%" align="center" font="{light}" fontsize="15%" color="{clrLightGray}" text="{recordings[date]} {recordings[time]}" />
+				<drawtextbox condition="isset{recordings[seriesname]}" x="4%" y="40%" width="{columnwidth}*0.85" align="center" maxlines="3" font="{light}" fontsize="15%" color="{clrLightGray}" text="{recordings[seriesname]} - {recordings[name]}" />
+				<drawtextbox condition="empty{recordings[seriesname]}" x="4%" y="40%" width="{columnwidth}*0.85" align="center" maxlines="3" font="{light}" fontsize="15%" color="{clrLightGray}" text="{recordings[name]}" />
+			</loop>
+		</area>
+
+		<area condition="eq({numtimers}, 5)++not{showInfosAndTimersAndLastrecs}" x="56%" y="80%" width="23%" height="18%" layer="3">
+			<loop name="recordings" x="0" y="0" orientation="horizontal" columnwidth="{areawidth}/2" rowheight="{areaheight}" overflow="cut">
+				<drawtext x="0" y="10%" align="center" font="{light}" fontsize="15%" color="{clrLightGray}" text="{recordings[date]} {recordings[time]}" />
+				<drawtextbox condition="isset{recordings[seriesname]}" x="5%" y="40%" width="{columnwidth}*0.8" align="center" maxlines="3" font="{light}" fontsize="15%" color="{clrLightGray}" text="{recordings[seriesname]} - {recordings[name]}" />
+				<drawtextbox condition="empty{recordings[seriesname]}" x="5%" y="40%" width="{columnwidth}*0.8" align="center" maxlines="3" font="{light}" fontsize="15%" color="{clrLightGray}" text="{recordings[name]}" />
+			</loop>
+		</area>
+
+		<area condition="gt({numtimers}, 4)++{showInfosAndTimersAndLastrecs}" x="45%" y="80%" width="34%" height="18%" layer="3">
 			<loop name="recordings" x="0" y="0" orientation="horizontal" columnwidth="{areawidth}/3" rowheight="{areaheight}" overflow="cut">
-				<drawimage x="0" y="0" width="{columnwidth}" height="{rowheight}" imagetype="skinpart" path="shadowsRecordingsMain" />
-				<drawtext align="center" y="10%" font="{light}" fontsize="15%" color="{clrLightGray}" text="{recordings[date]} {recordings[time]}" />
-				<drawtextbox x="2%" y="40%" width="{columnwidth}*0.8" align="center" maxlines="3" font="{light}" fontsize="15%" color="{clrLightGray}" text="{recordings[name]}" /> 
+				<drawtext x="0" y="10%" align="center" font="{light}" fontsize="15%" color="{clrLightGray}" text="{recordings[date]} {recordings[time]}" />
+				<drawtextbox condition="isset{recordings[seriesname]}" x="2%" y="40%" width="{columnwidth}*0.9" align="center" maxlines="3" font="{light}" fontsize="15%" color="{clrLightGray}" text="{recordings[seriesname]} - {recordings[name]}" />
+				<drawtextbox condition="empty{recordings[seriesname]}" x="2%" y="40%" width="{columnwidth}*0.9" align="center" maxlines="3" font="{light}" fontsize="15%" color="{clrLightGray}" text="{recordings[name]}" />
+			</loop>
+		</area>
+
+		<area condition="eq({numtimers}, 4)" x="45%" y="80%" width="34%" height="18%" layer="3">
+			<loop name="recordings" x="0" y="0" orientation="horizontal" columnwidth="{areawidth}/3" rowheight="{areaheight}" overflow="cut">
+				<drawtext x="0" y="10%" align="center" font="{light}" fontsize="15%" color="{clrLightGray}" text="{recordings[date]} {recordings[time]}" />
+				<drawtextbox condition="isset{recordings[seriesname]}" x="2%" y="40%" width="{columnwidth}*0.9" align="center" maxlines="3" font="{light}" fontsize="15%" color="{clrLightGray}" text="{recordings[seriesname]} - {recordings[name]}" />
+				<drawtextbox condition="empty{recordings[seriesname]}" x="2%" y="40%" width="{columnwidth}*0.9" align="center" maxlines="3" font="{light}" fontsize="15%" color="{clrLightGray}" text="{recordings[name]}" />
+			</loop>
+		</area>
+
+		<area condition="eq({numtimers}, 3)" x="34%" y="80%" width="45%" height="18%" layer="3">
+			<loop name="recordings" x="0" y="0" orientation="horizontal" columnwidth="{areawidth}/4" rowheight="{areaheight}" overflow="cut">
+				<drawtext x="0" y="10%" align="center" font="{light}" fontsize="15%" color="{clrLightGray}" text="{recordings[date]} {recordings[time]}" />
+				<drawtextbox condition="isset{recordings[seriesname]}" x="2%" y="40%" width="{columnwidth}*0.9" align="center" maxlines="3" font="{light}" fontsize="15%" color="{clrLightGray}" text="{recordings[seriesname]} - {recordings[name]}" />
+				<drawtextbox condition="empty{recordings[seriesname]}" x="2%" y="40%" width="{columnwidth}*0.9" align="center" maxlines="3" font="{light}" fontsize="15%" color="{clrLightGray}" text="{recordings[name]}" />
+			</loop>
+		</area>
+
+		<area condition="eq({numtimers}, 2)" x="23%" y="80%" width="56%" height="18%" layer="3">
+			<loop name="recordings" x="0" y="0" orientation="horizontal" columnwidth="{areawidth}/5" rowheight="{areaheight}" overflow="cut">
+				<drawtext x="0" y="10%" align="center" font="{light}" fontsize="15%" color="{clrLightGray}" text="{recordings[date]} {recordings[time]}" />
+				<drawtextbox condition="isset{recordings[seriesname]}" x="1%" y="40%" width="{columnwidth}*0.9" align="center" maxlines="3" font="{light}" fontsize="15%" color="{clrLightGray}" text="{recordings[seriesname]} - {recordings[name]}" />
+				<drawtextbox condition="empty{recordings[seriesname]}" x="1%" y="40%" width="{columnwidth}*0.9" align="center" maxlines="3" font="{light}" fontsize="15%" color="{clrLightGray}" text="{recordings[name]}" />
+			</loop>
+		</area>
+
+		<area condition="eq({numtimers}, 1)" x="12%" y="80%" width="67%" height="18%" layer="3">
+			<loop name="recordings" x="0" y="0" orientation="horizontal" columnwidth="{areawidth}/6" rowheight="{areaheight}" overflow="cut">
+				<drawtext x="0" y="10%" align="center" font="{light}" fontsize="15%" color="{clrLightGray}" text="{recordings[date]} {recordings[time]}" />
+				<drawtextbox condition="isset{recordings[seriesname]}" x="1%" y="40%" width="{columnwidth}*0.875" align="center" maxlines="3" font="{light}" fontsize="15%" color="{clrLightGray}" text="{recordings[seriesname]} - {recordings[name]}" />
+				<drawtextbox condition="empty{recordings[seriesname]}" x="1%" y="40%" width="{columnwidth}*0.875" align="center" maxlines="3" font="{light}" fontsize="15%" color="{clrLightGray}" text="{recordings[name]}" />
+			</loop>
+		</area>
+
+		<area condition="eq({numtimers}, 0)" x="1%" y="80%" width="78%" height="18%" layer="3">
+			<loop name="recordings" x="0" y="0" orientation="horizontal" columnwidth="{areawidth}/7" rowheight="{areaheight}" overflow="cut">
+				<drawtext x="0" y="10%" align="center" font="{light}" fontsize="15%" color="{clrLightGray}" text="{recordings[date]} {recordings[time]}" />
+				<drawtextbox condition="isset{recordings[seriesname]}" x="1%" y="40%" width="{columnwidth}*0.875" align="center" maxlines="3" font="{light}" fontsize="15%" color="{clrLightGray}" text="{recordings[seriesname]} - {recordings[name]}" />
+				<drawtextbox condition="empty{recordings[seriesname]}" x="1%" y="40%" width="{columnwidth}*0.875" align="center" maxlines="3" font="{light}" fontsize="15%" color="{clrLightGray}" text="{recordings[name]}" />
 			</loop>
 		</area>
 	</lastrecordings>
@@ -132,7 +176,7 @@
 	<devices> 
 	</devices>
 
-	<currentweather condition="{showTimersRecordingsandInfos}++not{showOnlyTimers}" detached="true" delay="200" fadetime="500" >
+	<currentweather condition="{showInfosAndTimers}||{showInfosAndTimersAndLastrecs}" detached="true" delay="200" fadetime="500" >
 		<area x="81%" y="92%" width="7%" height="6%" layer="3">
 			<drawimage name="weathericon" x="0" valign="center" width="{areaheight}*0.7" height="{areaheight}*0.7" imagetype="icon" path="{icon}" />
 			<drawtext name="temperature" x="0" align="right" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="{temperature}°C" />
@@ -143,16 +187,15 @@
 		</area>
 	</currentweather>
 
-	<systemload condition="{showTimersRecordingsandInfos}++not{showOnlyTimers}" detached="true" delay="200" fadetime="500" >
+	<systemload condition="{showInfosAndTimers}||{showInfosAndTimersAndLastrecs}" detached="true" delay="200" fadetime="500" >
 		<area x="79%" y="80%" width="21%" height="20%" layer="3">
-			<drawimage x="0" y="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="shadowsInfoMainLast" />
 		</area>
 		<area x="81%" y="86%" width="14%" height="6%" layer="3">
 			<drawtext x="0" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="System Load: {load}" />
 		</area>
 	</systemload>
 	
-	<temperatures condition="{showTimersRecordingsandInfos}++not{showOnlyTimers}" detached="true" delay="200" fadetime="500" >
+	<temperatures condition="{showInfosAndTimers}||{showInfosAndTimersAndLastrecs}" detached="true" delay="200" fadetime="500" >
 		<area x="81%" y="80%" width="14%" height="6%" layer="3">		
 			<drawtext x="0" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="CPU: {cputemp}°C   GPU: {gputemp}°C"/>
 		</area>
